API completa